--- a/lib/aisf_web/templates/layout/app.html.eex
+++ b/lib/aisf_web/templates/layout/app.html.eex
@@ -7,6 +7,14 @@
     <title>Aisf · Phoenix Framework</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+
+    <style>
+        .no-focus .focus-within:focus-within {
+            outline: none !important;
+            box-shadow: none !important;
+        }
+    </style>
+
   </head>
   <body>
     <div id="elm-main"></div>
