--- a/lib/aisf_web/templates/layout/app.html.eex
+++ b/lib/aisf_web/templates/layout/app.html.eex
@@ -19,6 +19,6 @@
   </head>
   <body>
     <div id="elm-main"></div>
-    <script type="text/javascript" src="<%= Routes.static_url(@conn, "/js/app.js") %>"></script>
+    <script type="text/javascript" src="/js/app.js""></script>
   </body>
 </html>
