--- a/lib/aisf_web/templates/layout/app.html.eex
+++ b/lib/aisf_web/templates/layout/app.html.eex
@@ -20,6 +20,9 @@
   </head>
   <body>
     <div id="elm-main"></div>
-    <script type="text/javascript" src="/js/app.js""></script>
+    <script>
+    var admin_cookie = "<%= @admin_cookie %>";
+    </script>
+    <script type="text/javascript" src="/js/app.js"></script>
   </body>
 </html>
