--- a/lib/aisf_web/templates/layout/app.html.eex
+++ b/lib/aisf_web/templates/layout/app.html.eex
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Aisf · Phoenix Framework</title>
     <base href="/">
-    <link rel="stylesheet" href="/css/app.css"/>
+    <link rel="stylesheet" href="/elixir/resources/css/app.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,100italic,400,400italic,700&display=fallback" rel="stylesheet">
 
@@ -23,6 +23,6 @@
     <script>
     var admin_cookie = "<%= @admin_cookie %>";
     </script>
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/elixir/resources/js/app.js"></script>
   </body>
 </html>
