--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -30,7 +30,7 @@ th {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-  padding: 4px;
+  padding: 4px 16px;
   line-height: 1.42857143;
   vertical-align: top;
 }
